--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,7 +2,8 @@ name: Create and publish a Docker image to GHCR
 
 on:
   push:
-    branches: ['release']
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
     
   workflow_dispatch:
 
